--- a/foodExplorer/index.html
+++ b/foodExplorer/index.html
@@ -9,11 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Load your main JavaScript file -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
