--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>All your favorite foods</title>
   </head>
   <body>
     <div id="root"></div>
